juicer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: juiceshop-ingress
  namespace: juiceshop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: juiceshop
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: juiceshop2
          servicePort: 80
        path: /(.*)
