juiceshop-aks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juiceshop
  labels:
    app: juiceshop
    env: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop
  labels:
    app: juiceshop
  namespace: juiceshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: juiceshop
  template:
    metadata:
      labels:
        app: juiceshop
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: juiceshop
        image: bkimminich/juice-shop:v9.1.3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juiceshop
  name: juiceshop
  namespace: juiceshop
spec:
  ports:
  - nodePort: 31000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: juiceshop
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: juiceshop-ingress
  namespace: juiceshop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: juiceshop
          servicePort: 80
        path: /(.*)
